Remove jlink and avoid separate use of jlink tool